--- a/frontend/components/comments/commentsStyle.styl
+++ b/frontend/components/comments/commentsStyle.styl
@@ -30,7 +30,7 @@
             font-size 25px
             text-align left
         .user-icon
-            font-size 20px
+            font-size 50px
         .comment 
             font-family "Open Sans"
             font-weight 400
@@ -47,6 +47,7 @@
         .attachment
             font-size 20px
         .button
+            box-shadow 0px 0px 10px 0px grey
             display flex
             justify-content center
             align-items center
@@ -62,5 +63,7 @@
             cursor pointer
             &:hover
                 box-shadow 0px 0px 0px 1px white, 0px 0px 0px 4px #1d8dbf
+            &:active
+                box-shadow 0px 0px 0px 0.5px white, 0px 0px 0px 2px #1d8dbf, 0px 0px 5px 0px white inset
         .comment-button
             font-family "Montserrat"
