--- a/frontend/components/comments/comments.template.pug
+++ b/frontend/components/comments/comments.template.pug
@@ -38,7 +38,8 @@
             section.col-xs-12
               section.row.message-holder
                 span.attachment.button.col-xs-1.fa-paperclip.fa.col-xs-offset-11
-                textarea.col-xs-12.user-message
+              section.row.center-xs.center-xs
+                textarea.col-xs-11.user-message
               |                         
               section.row
                 section.button.comment-button.col-xs-4.col-xs-offset-4 Comment
