--- a/frontend/components/comments/commentsStyle.styl
+++ b/frontend/components/comments/commentsStyle.styl
@@ -1,3 +1,9 @@
+border-grey #adadad
+background-white #F5F5F5
+shadow-grey #808080
+main-text-color #212121
+add-text-color #F2992E
+main-blue #1d8dbf
 .comments-wrapper
     width 100%
     padding 1%
@@ -46,6 +52,8 @@
             font-size 18px
         .attachment
             font-size 20px
+        .comments-tools
+            width 100%
         .button
             box-shadow 0px 0px 10px 0px grey
             display flex
