--- a/frontend/components/menu/menuStyles.styl
+++ b/frontend/components/menu/menuStyles.styl
@@ -9,6 +9,7 @@
   font-size: 20px;
 }
 .side-menu {
+  box-shadow 0px 5px 20px 2px  #808080
   border-top-right-radius : 10px;
   border-bottom-right-radius : 10px;
   background-color #fbfbfb;
@@ -23,7 +24,7 @@
 }
 .side-menu:hover {
   width: 180px;
-  overflow: visible;
+  overflow: hidden;
 }
 .side-menu > ul {
   margin: 1px 0;
