--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -1,10 +1,68 @@
+border-grey = #adadad
+background-white = #F5F5F5
+shadow-grey = #808080
+main-text-color = #212121
+add-text-color = #F2992E
+main-blue = #1d8dbf
+button()
+    box-shadow 0px 0px 10px 0px grey
+    display flex
+    justify-content center
+    align-items center
+    margin-top  1%
+    margin-bottom 1%
+    border-radius 5px
+    background-color #1d8dbf
+    color white
+    padding 1%
+    font-size 30px
+    height 50px
+    transition 0.2s
+    cursor pointer
+    &:hover
+        box-shadow 0px 0px 0px 1px white, 0px 0px 0px 4px #1d8dbf
+    &:active
+        box-shadow 0px 0px 0px 0.5px white, 0px 0px 0px 2px #1d8dbf, 0px 0px 5px 0px white inset
 .reports-wrapper
     width 100%
     *
         box-sizing border-box
         padding 0px
-    .reports-holder
-        width 100%
     .row, [class^="col-"]
         padding 0px
+    .reports-holder
+        padding-left  1%
+        padding-right   1%
+        padding-bottom 1%
+        border 1px solid border-grey
+        border-radius 10px
+        background-color background-white
+        box-shadow 0px 5px 20px 2px  shadow-grey
+    .reports-header
+        h3
+            font-family "Montserrat"
+            font-size 30px
+        padding 1%
+    .reports-tools
+        .sub-title
+            font-family "Montserrat"
+            font-size 23px
+        li span
+            font-family "Open Sans"
+            font-size 18px
+        [type='checkbox']
+            height 20px
+            width 20px
+        select
+            font-family "Open Sans"
+            font-size 18px
+            margin 1% auto
+    .reports-body
+        .report-item-title
+            font-family "Montserrat"
+            font-size 18px
+    .button
+        button()
+    
+
         
