--- a/frontend/components/comments/commentsStyle.styl
+++ b/frontend/components/comments/commentsStyle.styl
@@ -1,9 +1,4 @@
-border-grey #adadad
-background-white #F5F5F5
-shadow-grey #808080
-main-text-color #212121
-add-text-color #F2992E
-main-blue #1d8dbf
+@import "../../../public/libs/css/generalComponentsStyle.styl"
 .comments-wrapper
     width 100%
     padding 1%
@@ -13,9 +8,9 @@ main-blue #1d8dbf
         margin 0
    .comments-holder
         padding 1%
-        border 1px solid #adadad
+        border 1px solid border-grey
         border-radius 10px
-        background-color #F5F5F5 
+        background-color background-white 
         box-shadow 0px 5px 20px 2px  #808080
         .comments-header 
             border-bottom 1px solid grey
@@ -46,7 +41,7 @@ main-blue #1d8dbf
             font-family "Open Sans"
             font-size 18px
             font-weight bold
-            color #F2992E
+            color add-text-color
         .user-message 
             height 100px
             font-size 18px
@@ -55,23 +50,6 @@ main-blue #1d8dbf
         .comments-tools
             width 100%
         .button
-            box-shadow 0px 0px 10px 0px grey
-            display flex
-            justify-content center
-            align-items center
-            margin-top  1%
-            margin-bottom 1%
-            border-radius 5px
-            background-color #1d8dbf
-            color white
-            padding 1%
-            font-size 30px
-            height 50px
-            transition 0.2s
-            cursor pointer
-            &:hover
-                box-shadow 0px 0px 0px 1px white, 0px 0px 0px 4px #1d8dbf
-            &:active
-                box-shadow 0px 0px 0px 0.5px white, 0px 0px 0px 2px #1d8dbf, 0px 0px 5px 0px white inset
+            button()
         .comment-button
             font-family "Montserrat"
