--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -1,5 +1,7 @@
+@import "../../../public/libs/css/generalComponentsStyle.styl"
 .reports-wrapper
     width 100%
+    padding 1%
     *
         box-sizing border-box
         padding 0px
@@ -38,6 +40,7 @@
             font-size 18px
     .button
         button()
+        font-family "Montserrat"
     
 
         
