--- a/frontend/components/header/headerStyles.css
+++ b/frontend/components/header/headerStyles.css
@@ -6,7 +6,9 @@ body {
 }
 /* HEADER*/
 #navigation {
+  height: 50px;
   background: #403f3f;
+  overflow: hidden;
 }
 #nav-list,
 #nav-list-2 {
@@ -14,6 +16,7 @@ body {
   padding: 0;
 }
 #navigation input {
+  border-radius: 10px;
   padding: 6px;
   margin: 10px;
   background-color: #fff;
@@ -24,6 +27,7 @@ body {
   color: #e1e1e1;
   display: block;
   padding: 15px;
+  height: 50px;
 }
 #navigation a:hover {
   background-color: #6a6f79;
