--- a/frontend/components/header/headerStyles.styl
+++ b/frontend/components/header/headerStyles.styl
@@ -6,7 +6,9 @@ body {
 }
 /* HEADER*/
 #navigation {
+ height: 50px;
   background: #403f3f;
+ overflow: hidden;
   
 }
 
@@ -16,6 +18,7 @@ body {
   padding: 0;
 }
 #navigation input {
+  border-radius 10px
   padding: 6px;
   margin: 10px;
   background-color white;
@@ -26,6 +29,7 @@ body {
   color: #e1e1e1;
   display: block;
   padding: 15px;
+  height 50px;
 }
 #navigation a:hover {
   background-color: #6a6f79;
