--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -72,7 +72,7 @@ section.reports-wrapper
                           option 13 May 2016
           |                 
           section.row.center-xs
-            section.col-xs-4.button Generate
+            section.col-xs-4.report-button Generate
           hr
           section.row.reports-body.center-xs
             section.col-xs-7
