--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -38,9 +38,11 @@
         .report-item-title
             font-family "Montserrat"
             font-size 18px
-    .button
+    .report-button
         button()
         font-family "Montserrat"
+    .button
+        button()
     
 
         
