--- a/frontend/components/drafts/drafts.template.pug
+++ b/frontend/components/drafts/drafts.template.pug
@@ -1,7 +1,8 @@
-.drafts-container
-    h1 Drafts
-    hr.drafts-line.hr-style
+.drafts-container  
+    span.col-xs-1.col-xs-offset-10.fa.fa-close.button.exit-draft
     .drafts-items
+        h1 Drafts
+        hr.drafts-line.hr-style
         .draft
             .draft-title
                 h2  Draft Title
