--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -1,73 +1,72 @@
-.wrapper
-  padding 10px 10px 10px 10px
+@import "../../../public/libs/css/generalComponentsStyle.styl"
+.projectwrapper
+  width 100%
   h1
     text-align center
   .goto
     text-align center
-
-.head
-  display flex
-  flex-wrap wrap
-  justify-content space-between
+    a 
+      margin-left 5px
+      margin-bottom 5px
+  padding 1%
   h1
     align-self center
-  i
-  	margin-left 2px
-    
-a
-  color black
-  &:hover
-    color blue
-
-.nav
-  align-self center
-  min-width 160px
-.goto
-    a
-      margin-left 3px
-
-.main
-  display flex
-  flex-direction row
-  justify-content center
-  form[name="projectEdit"]
+    font-family "Montserrat"
+    text-align left
+    width 100%
+    display inline-block
+    font-weight bold
+    font-size 30px
+  .main
+    padding 1%
+    border 1px solid border-grey
+    border-radius 10px
+    background-color background-white 
+    box-shadow 0px 5px 20px 2px  #808080
     display flex
     flex-direction column
-    float left
-    clear left
-    width 100%
-    margin 30px 0 1.5em 0
-    padding 0
-    button
-      min-width 40%
-      max-width 45%
-      align-self center
-    label
-      float left
-      width 7em
-      margin-right 0.5em
+    justify-content center
+    font-family "Open Sans"
+    font-weight 400
+    font-size 23px
+    text-align justify
+    form[name="projectEdit"]
       display flex
-    .wrap
+      flex-direction column
       float left
       clear left
       width 100%
-      padding-bottom 1em
-      display flex
-      flex-direction row
-      justify-content center
-      flex-wrap wrap
-    i
-      align-self center
-    input
-      min-width 60%
-      max-width 75%
-    textarea
-      min-width 60%
-      max-width 75%
-      height 150px
-    select
-      min-width 60%
-      max-width 75%
+      margin 30px 0 1.5em 0
+      padding 0
+      button
+        font-family "Montserrat"
+        button()
+      label
+        float left
+        width 7em
+        margin-right 0.5em
+        display flex
+      .wrap
+        float left
+        clear left
+        width 100%
+        padding-bottom 1em
+        display flex
+        flex-direction row
+        justify-content center
+        flex-wrap wrap
+      i
+        align-self center
+      input
+        min-width 60%
+        max-width 75%
+      textarea
+        min-width 60%
+        max-width 75%
+        height 150px
+      select
+        min-width 60%
+        max-width 75%
     .participants
       min-width 60%
       max-width 75%
@@ -75,4 +74,6 @@ a
     a
       align-self center
       margin-left 2px
+
+
 
