Updated tasks template

--- a/frontend/components/tasks/tasksStyles.styl
+++ b/frontend/components/tasks/tasksStyles.styl
@@ -76,4 +76,16 @@
 .tasks-align-right
 	text-aligh: right
 
+.collapse
+	flex: 0 1 0
+	display: none
+	transition: all 2s
 
+.wrapper
+	display: flex
+	flex-direction: column
+
+.expand
+	display: block
+	flex: 1 1 100%
+	transition: all 3s
