--- a/frontend/components/tasks/tasksTemplate.pug
+++ b/frontend/components/tasks/tasksTemplate.pug
@@ -25,33 +25,151 @@
                 input.tasks-input(type="text")
     .tasks-main-container
 
-        div.row.tasks-row-margin-top
-            div.col-xs-1 4/7 |
-            div.col-xs-4 Set up external auth Server
-            div.col-xs-4.tasks-align-right expires in: 36 hours
-            div.col-xs-1.tasks-align-right  
-                i.fa.fa-arrow-down.fa-2
+        .wrapper
+            .row.tasks-row-margin-top
+                div.col-xs-1 4/5 |
+                div.col-xs-4 Set up external auth Server
+                div.col-xs-4.tasks-align-right expires in: 36 hours
+                div.col-xs-1.tasks-align-right
+                    i.fa.fa-arrow-down.fa-2(ng-click="expand1 = (!expand1)? 'expand': ''")
+            .row#content-1.collapse(ng-class="expand1")
+                .col-xs-12
+                    span 
+                        i.fa.fa-check-circle-o.fa-2
+                    span 
+                        |  First Step Name1, Name2
+                    br
+                    span 
+                        i.fa.fa-check-circle-o.fa-2
+                    span
+                        |  Second Step Name1, Name2
+                    br
+                    span 
+                        i.fa.fa-check-circle-o.fa-2                    
+                    span
+                        |  Fifth Step Name1, Name2
+                    br
+                    span 
+                        i.fa.fa-check-circle-o.fa-2                   
+                    span
+                        |  Sixth Step Name1, Name2
+                    br
+                    span 
+                        i.fa.fa-circle-o.fa-2                   
+                    span 
+                        |  Sixth Step Name1, Name2
 
-        div.row.tasks-row-margin-top
-            div.col-xs-1 2/4 |
-            div.col-xs-4 Set up infrastructure for "checkin"
-            div.col-xs-4.tasks-align-right expires in: 72 hours
-            div.col-xs-1.tasks-align-right  
-                i.fa.fa-arrow-down.fa-2
+        .wrapper
+            .row.tasks-row-margin-top
+                div.col-xs-1 2/4 |
+                div.col-xs-4 Set up infrastructure for "checkin"
+                div.col-xs-4.tasks-align-right expires in: 72 hours
+                div.col-xs-1.tasks-align-right
+                    i.fa.fa-arrow-down.fa-2(ng-click="expand2 = (!expand2)? 'expand': ''")
+            .row#content-1.collapse(ng-class="expand2")
+                .col-xs-12
+                    span
+                        i.fa.fa-check-circle-o.fa-2
+                    span
+                        | First Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-check-circle-o.fa-2
+                    span
+                        |  Second Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2
+                    span
+                        | Fifth Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2  
+                    span
+                        | Sixth Step Name1, Name2
 
-        div.row.tasks-row-margin-top
-            div.col-xs-1 1/6 |
-            div.col-xs-4 Set up infrastructure for "task"
-            div.col-xs-4.tasks-align-right expires in: 24 hours
-            div.col-xs-1.tasks-align-right 
-                 i.fa.fa-arrow-down.fa-2
+        .wrapper
+            .row.tasks-row-margin-top
+                div.col-xs-1 1/6 |
+                div.col-xs-4 Set up infrastructure for "task"
+                div.col-xs-4.tasks-align-right expires in: 24 hours
+                div.col-xs-1.tasks-align-right
+                     i.fa.fa-arrow-down.fa-2(ng-click="expand3 = (!expand3)? 'expand': ''")
+            .row#content-1.collapse(ng-class="expand3")
+                .col-xs-12
+                    span
+                        i.fa.fa-check-circle-o.fa-2
+                    span
+                        |  First Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2
+                    span
+                        | Second Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2    
+                    span
+                        |  Third Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2    
+                    span
+                        | Fourth Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2    
+                    span
+                        | Fifth Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2    
+                    span
+                        | Sixth Step Name1, Name2
 
-        div.row.tasks-row-margin-top
-            div.col-xs-1 3/8 |
-            div.col-xs-4 Create glossary
-            div.col-xs-4.tasks-align-right expires in: 12 hours
-            div.col-xs-1.tasks-align-right  
-                i.fa.fa-arrow-down.fa-2
+        .wrapper
+            .row.tasks-row-margin-top
+                div.col-xs-1 3/8 |
+                div.col-xs-4 Create glossary
+                div.col-xs-4.tasks-align-right expires in: 12 hours
+                div.col-xs-1.tasks-align-right
+                    i.fa.fa-arrow-down.fa-2(ng-click="expand4 = (!expand4)? 'expand': ''")
+            .row#content-1.collapse(ng-class="expand4")
+                .col-xs-12
+                    span
+                        i.fa.fa-check-circle-o.fa-2
+                    span
+                        |  First Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-check-circle-o.fa-2
+                    span
+                        | Second Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-check-circle-o.fa-2    
+                    span
+                        |  Third Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2    
+                    span
+                        | Fourth Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2    
+                    span
+                        | Fifth Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2    
+                    span
+                        | Sixth Step Name1, Name2
+                    br
+                    span
+                        i.fa.fa-circle-o.fa-2    
+                    span
+                        | Eight Step Name1, Name2    
 
 //div.row.arround-xs
    // div.col.xs-4
