--- a/frontend/components/events/eventList.component.pug
+++ b/frontend/components/events/eventList.component.pug
@@ -1,65 +1,45 @@
 .events-wrapper
-    ul.events-header-container
-        li
-            span
-                h1 Events
-        li
-            button Set up event
-    .choose-event-container
-        .choose-event
-            .show-events
-                p Show all events:
-            .form
-                form(action='')
-                    span.events-blue-gray  after:
-                    input(type='date', name='bday', max='1979-12-31')
-                    span.events-blue-gray  before:
-                    input(type='date', name='bday', min='2000-01-02')
-    .big-date.events-61-color
-        h1 13 May 2013
-    .events
-        .events-header
-            .events-title.events-61-color
-                h2 Event#1
-            .events-icons
-                <i class="fa fa-comment" aria-hidden="true"></i>
-                <i class="fa fa-rss" aria-hidden="true"></i>
-                p.events-blue-gray  10:20
-        .events-description
-            p.
-                | Lorem ipsum nec metus per nibh ligula ultrices fusce lectus aliquam, tellus lacus molestie et fringilla elit ad cursus venenatis litora, felis ligula vulputate velit in netus nullam taciti rutrum.
+    section.row.center-xs
+        section.col-xs-8.events-holder
+            section.row.events-header.center-xs
+                span.col-xs-11 Events
+            section.row
+                section.button.comment-button.col-xs-4.col-xs-offset-4 Set up event
+            .choose-event-container
+                section.row.choose-event.center-xs
+                    row.middle-xs
+                        .show-events
+                            h2 Show all events:
+                        .form
+                            form(action='')
+                                span.events-blue-gray  from:
+                                input(type='date', name='bday', max='1979-12-31')
+                                span.events-blue-gray  to:
+                                input(type='date', name='bday', min='2000-01-02')
+            section.row.big-date
+                h2.col-xs-4.col-xs-offset-4 13 May 2013
 
-                Non lectus pellentesque sociosqu eleifend morbi hac inceptos lacus, tortor conubia in arcu bibendum at cursus placerat hendrerit, pulvinar dictumst lorem tincidunt nec vehicula euismod.
-
-                Accumsan rutrum faucibus pulvinar etiam metus ut vel, mattis aenean sed aliquet laoreet rhoncus curabitur mi, torquent malesuada elementum etiam fames metus adipiscing eleifend fermentum interdum porta suscipit turpis nec.
-
-                Tortor euismod class torquent aliquam venenatis tincidunt, scelerisque libero convallis ut ipsum tempus, erat nostra porttitor curabitur primis feugiat dapibus consequat curabitur eleifend habitasse felis quisque fusce inceptos.
-
-                Mollis facilisis aenean accumsan blandit adipiscing quam erat nam nisl pharetra orci, platea varius ipsum pellentesque maecenas rhoncus porttitor commodo sociosqu aenean rutrum, sapien netus porta id donec curabitur accumsan suscipit dolor sem.
-
-                Scelerisque a ullamcorper torquent tempor neque ultricies ut odio pharetra ut nostra, dictumst sagittis vestibulum curabitur libero taciti proin sem libero urna, semper aliquam ac est ligula vulputate integer facilisis ipsum aptent.
-
-                Felis potenti tortor dui habitasse consectetur fames dolor nam tempor, est rhoncus congue convallis ligula maecenas amet per, molestie himenaeos duis eu laoreet cursus sociosqu curae.
-    .events
-        .events-header
-            .events-title.events-61-color
-                h2 Event#2
-            .events-icons
-                <i class="fa fa-comment" aria-hidden="true"></i>
-                <i class="fa fa-rss" aria-hidden="true"></i>
-                p.events-blue-gray  10:10
-        .events-description
-            p.
-                | Lorem ipsum nec metus per nibh ligula ultrices fusce lectus aliquam, tellus lacus molestie et fringilla elit ad cursus venenatis litora, felis ligula vulputate velit in netus nullam taciti rutrum.
-
-                Non lectus pellentesque sociosqu eleifend morbi hac inceptos lacus, tortor conubia in arcu bibendum at cursus placerat hendrerit, pulvinar dictumst lorem tincidunt nec vehicula euismod.
-
-                Accumsan rutrum faucibus pulvinar etiam metus ut vel, mattis aenean sed aliquet laoreet rhoncus curabitur mi, torquent malesuada elementum etiam fames metus adipiscing eleifend fermentum interdum porta suscipit turpis nec.
-
-                Tortor euismod class torquent aliquam venenatis tincidunt, scelerisque libero convallis ut ipsum tempus, erat nostra porttitor curabitur primis feugiat dapibus consequat curabitur eleifend habitasse felis quisque fusce inceptos.
-
-                Mollis facilisis aenean accumsan blandit adipiscing quam erat nam nisl pharetra orci, platea varius ipsum pellentesque maecenas rhoncus porttitor commodo sociosqu aenean rutrum, sapien netus porta id donec curabitur accumsan suscipit dolor sem.
-
-                Scelerisque a ullamcorper torquent tempor neque ultricies ut odio pharetra ut nostra, dictumst sagittis vestibulum curabitur libero taciti proin sem libero urna, semper aliquam ac est ligula vulputate integer facilisis ipsum aptent.
-
-                Felis potenti tortor dui habitasse consectetur fames dolor nam tempor, est rhoncus congue convallis ligula maecenas amet per, molestie himenaeos duis eu laoreet cursus sociosqu curae.
+            section.events-items
+                .event
+                    .section.row.event-header
+                        section.row.col-xs-6
+                            h2  Event1  
+                            i.fa.fa-folder-open-o.fa-2x
+                        .col-xs-4.col-xs-offset-2
+                            .box
+                                i.fa.fa-comment.fa-2x
+                                i.fa.fa-rss.fa-2x
+                    .event-body
+                        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum efficitur quam, nec tristique urna. Cum sociis natoque         penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque lobortis sem sed metus suscipit, ut euismod massa       scelerisque. Fusce interdum pharetra nulla
+                hr
+                .event
+                    .section.row.event-header
+                        section.row.col-xs-6
+                            h2  Event2
+                            i.fa.fa-folder-open-o.fa-2x
+                        .col-xs-4.col-xs-offset-2
+                            .box
+                                i.fa.fa-comment.fa-2x
+                                i.fa.fa-rss.fa-2x
+                    .event-body
+                        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum efficitur quam, nec tristique urna. Cum sociis natoque         penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque lobortis sem sed metus suscipit, ut euismod massa       scelerisque. Fusce interdum pharetra nulla
