Menu and header redesign

--- a/frontend/components/header/header-pug.component.pug
+++ b/frontend/components/header/header-pug.component.pug
@@ -1,16 +1,16 @@
-header#wrapper-header
+header.header-wrapper
     nav#navigation
-        ul#nav-list
-            li
-                input(type='search', placeholder='Search')
-            li
+        ul.row
+            li.col-xs-6
+                input(type='text', placeholder='Search')
+            li.col-xs-3
                 a(href='#') Profile
-            li
+            li.col-xs-1
                 a(href='#')
                     i.fa.fa-blind.fa-lg
-            li
+            li.col-xs-1
                 a(href='#')
                     i.fa.fa-glass.fa-lg
-            li
+            li.col-xs-1
                 a(href='#')
                     i.fa.fa-gavel.fa-lg
