--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -75,7 +75,7 @@ section.reports-wrapper
             section.col-xs-4.report-button Generate
           hr
           section.row.reports-body.center-xs
-            section.col-xs-7
+            section.col-xs-9
               section.row
                 h3.col-xs-6.col-xs-offset-3.report-item-title 13 May 2016
               |                         
@@ -95,9 +95,9 @@ section.reports-wrapper
               section.row
                 section.col-xs-12
                   section.row.start-xs 
-                    span.col-xs-8 Set up external auth server
+                    span.col-xs-7 Set up external auth server
                     |                                     
-                    span.col-xs-1.fa.fa-comment
+                    span.col-xs-1.col-xs-offset-1.fa.fa-comment
                     |                                     
                     span.col-xs-1.fa.fa-rss
                   |                                 
