--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -35,6 +35,7 @@
             font-size 18px
             margin 1% auto
     .reports-body
+        display none
         .report-item-title
             font-family "Montserrat"
             font-size 18px
