--- a/frontend/components/menu/menuStyles.styl
+++ b/frontend/components/menu/menuStyles.styl
@@ -1,95 +1,78 @@
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css");
-.fa {
-  position: relative;
-  display: table-cell;
-  width: 60px;
-  height: 35px;
-  text-align: center;
-  vertical-align: middle;
-  font-size: 20px;
-}
-.side-menu {
-  box-shadow 0px 5px 20px 2px  #808080
-  border-top-right-radius : 10px;
-  border-bottom-right-radius : 10px;
-  background-color #fbfbfb;
-  position: absolute;
-  left: 0;
-  width: 60px;
-  overflow: hidden;
-  -webkit-transition: width 0.05s linear;
-  transition: width 0.01s linear;
-  -webkit-transform: translateZ(0) scale(1, 1);
-  z-index: 1000;
-}
-.side-menu:hover {
-  width: 180px;
-  overflow: hidden;
-}
-.side-menu > ul {
-  margin: 1px 0;
-}
-.side-menu li {
-    transition 0.2s;
-    overflow hidden;
-  position: relative;
-  display: block;
-  width: 250px;
-}
-.side-menu li > a {
-    overflow hidden;
-  position: relative;
-  display: table;
-  border-collapse: collapse;
-  border-spacing: 0;
-  color: #6f6f6f;
-  font-family: "Montserrat";
-  font-size: 15px;
-  text-decoration: none;
-  -webkit-transform: translateZ(0) scale(1, 1);
-  -webkit-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-}
-.side-menu .nav-text {
-  position: relative;
-  display: table-cell;
-  vertical-align: middle;
-  width: 120px;
-  font-family: "Montserrat", sans-serif;
-}
-.no-touch .scrollable.hover {
-  overflow-y: hidden;
-}
-.no-touch .scrollable.hover:hover {
-  overflow-y: auto;
-  overflow: visible;
-}
-a:hover,
-a:focus {
-  text-decoration: none;
-}
-nav {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-}
-nav ul,
-nav li {
-  outline: 0;
-  margin: 0;
-  padding: 0;
-}
-.side-menu li:hover > a,
-nav.side-menu li.active > a,
-.dropdown-menu > li > a:hover,
-.dropdown-menu > li > a:focus,
-.dropdown-menu > .active > a,
-.dropdown-menu > .active > a:hover,
-.dropdown-menu > .active > a:focus,
-.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,
-.dashboard-page nav.dashboard-menu ul li.active a {
-  color: #fff;
-  background-color: #5fa2db;
-}
+.side-menu-wrapper
+    padding-top 2%
+    .fa
+        position: relative;
+        display: table-cell;
+        color #929292
+        width: 60px;
+        height: 35px;
+        text-align: center;
+        vertical-align: middle;
+        font-size: 20px;
+    .side-menu
+        box-shadow 0px 5px 20px 2px  #808080
+        border-top-right-radius : 5px;
+        border-bottom-right-radius : 5px;
+        background-color #fbfbfb;
+        position: absolute;
+        left: 0;
+        width: 60px;
+        overflow: hidden;
+        -webkit-transition: width 0.2s linear;
+        transition: width 0.2s linear;
+        -webkit-transform: translateZ(0) scale(1, 1);
+        z-index: 1000;
+    .side-menu:hover
+        width: 180px;
+        overflow: hidden;
+    .side-menu > ul
+        margin: 1px 0;
+    .side-menu li 
+        transition 0.2s;
+        overflow hidden;
+        position: relative;
+        display: block;
+        width: 250px;
+        &:hover
+            .fa
+                color black
+    .side-menu li > a
+        overflow hidden;
+        position: relative;
+        display: table;
+        border-collapse: collapse;
+        border-spacing: 0;
+        color: #929292;
+        font-family: "Montserrat";
+        font-size: 15px;
+        text-decoration: none;
+        -webkit-transform: translateZ(0) scale(1, 1);
+        -webkit-transition: all 0.2s linear;
+        transition: all 0.2s linear;
+    .side-menu .nav-text
+        position: relative;
+        display: table-cell;
+        vertical-align: middle;
+        width: 120px;
+        font-family: "Montserrat", sans-serif;
+    .no-touch .scrollable.hover
+        overflow-y: hidden;
+    .no-touch .scrollable.hover:hover
+        overflow-y: auto;
+        overflow: visible;
+    a:hover,a:focus
+        text-decoration: none;
+    nav
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
+    nav ul,nav li
+        outline: 0;
+        margin: 0;
+        padding: 0;
+    .side-menu li:hover > a, nav.side-menu li.active > a, .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus, .no-touch .dashboard-page nav.dashboard-menu ul li:hover a, .dashboard-page nav.dashboard-menu ul li.active a
+        color: #fff;
+        background-color: #5fa2db;
