--- a/frontend/components/editMessage/editMessage.styl
+++ b/frontend/components/editMessage/editMessage.styl
@@ -1,3 +1,4 @@
+@import "../../../public/libs/css/generalComponentsStyle.styl"
 .post-message-wrapper
   width 40%
   border 1px solid #7986CB
@@ -6,15 +7,20 @@
   top 100px
   left 30%
   margin-bottom 50px
+  background-color background-white
   header
     margin-bottom 30px
+    display flex
     h2
       margin-left 1%
       padding 1%
       font-size 1.4em
-    img
-      margin-left 10%
-      width 5%
+      font-family "Montserrat"
+    button
+      button()
+      margin-left 60%
+      margin-top 3%
+      width 10%
     hr
       width 80%
       height 1px
@@ -27,6 +33,7 @@
       width 70%
       font-size 1.6em
       resize none
+      font-family "Open Sans"
     .img-block
       width 8%
       position absolute
@@ -39,16 +46,16 @@
       width 71%
       text-align center
   .draft-post
-    margin-bottom 20px
     select
       font-size 1.6em
       width 25%
       margin-left 10%
       margin-right 14%
-    button
-      font-size 1.6em
-      width 25%
-      background-color #ffcc80
-      margin-right 10%
-      margin-left 14%
-      border-radius 10px
+  button
+    button()
+    width 20%
+    padding-top 1%
+    padding-bottom 1%
+    margin-left 40%
+    margin-bottom 40px
+    margin-top 50px
