--- a/frontend/components/files/files.styl
+++ b/frontend/components/files/files.styl
@@ -1,3 +1,4 @@
+@import "../../../public/libs/css/generalComponentsStyle.styl"
 .files-wrapper
     width 35%
     border 1px solid #7986CB
@@ -5,18 +6,23 @@
     position absolute
     top 100px
     left 500px
+    background-color background-white
     header
+        display flex
         h2
             padding 1%
             font-size 1.8em
+            font-family "Montserrat"
         hr
             width 70%
             height 1px
             background-color #EF6C00
             margin-left 0
-        img
-            margin-left 60%
-            width 5%
+        button
+            button()
+            margin-left 70%
+            margin-top 3%
+            width 10%
     .content
         ul
             width: 100%
@@ -36,8 +42,14 @@
                     height 1px
                     background-color #616161
     button
-        margin-left 30%
+        button()
         width 40%
-        font-size 1.6em
-        margin-bottom 20px
-        background-color #91bd4c
+        padding-top 1%
+        padding-bottom 1%
+        margin-left 30%
+        margin-bottom 40px
+        //margin-left 30%
+        //width 40%
+        //font-size 1.6em
+        //margin-bottom 20px
+        //background-color #91bd4c
