--- a/frontend/components/messageBoard/messageBoard.pug
+++ b/frontend/components/messageBoard/messageBoard.pug
@@ -5,13 +5,17 @@ section.messageBoard
     button(ng-link='["PostMessage"]') Post message
   section.message
     section.messageInfo
-      div
-          img(src='https://cdn0.iconfinder.com/data/icons/user-pictures/100/matureman1-128.png', alt='avatar')
-          span Name Surame
-      section.useButton
-              img(ng-link='["File"]', src='https://cdn4.iconfinder.com/data/icons/miu/24/editor-documents-files-outline-stroke-128.png')
-              img(ng-link='["Comments"]', src='https://cdn4.iconfinder.com/data/icons/miu/24/other-conversation-review-comment-bubble-talk-outline-stroke-128.png')
-              img(src='https://cdn4.iconfinder.com/data/icons/43-social-media-line-icons/24/Share-128.png')
+      section.header
+        div
+            img(src='https://cdn0.iconfinder.com/data/icons/user-pictures/100/matureman1-128.png', alt='avatar')
+            span Name Surame
+        section.useButton
+                button.fa.fa-files-o(ng-link='["File"]')
+                button.fa.fa-comment(ng-link='["Comments"]')
+                button.fa.fa-share
+                //img(ng-link='["File"]', src='https://cdn4.iconfinder.com/data/icons/miu/24/editor-documents-files-outline-stroke-128.png')
+                //img(ng-link='["Comments"]', src='https://cdn4.iconfinder.com/data/icons/miu/24/other-conversation-review-comment-bubble-talk-outline-stroke-128.png')
+                //img(src='https://cdn4.iconfinder.com/data/icons/43-social-media-line-icons/24/Share-128.png')
       hr
       article.messageContent(ng-link='["EditMessage"]')
         h2 Title
