--- a/frontend/components/comments/comments.template.pug
+++ b/frontend/components/comments/comments.template.pug
@@ -4,7 +4,7 @@
           section.row.comments-header
             span.col-xs-11 Comments
             |                     
-            .middle-xs.col-xs-1.fa.fa-close.button
+            .middle-xs.col-xs-1.fa.fa-close.button(ng-link='["MainPage"]')
           |                 
           .row.comments-body
             ul.col-xs-12
