--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -3,7 +3,7 @@ section.reports-wrapper
         section.col-xs-10.reports-holder
           section.row.reports-header.middle-xs
             h3.col-xs-6.start-xs.col-xs-offset-1 Reports
-            span.col-xs-1.col-xs-offset-4.fa.fa-close.button
+            span.col-xs-1.col-xs-offset-4.fa.fa-close.button(ng-link='["MainPage"]')
             
           |                 
           hr
