--- a/frontend/components/header/header-pug.component.pug
+++ b/frontend/components/header/header-pug.component.pug
@@ -3,14 +3,14 @@ header.header-wrapper
         ul.row
             li.col-xs-6
                 input(type='text', placeholder='Search')
-            li.col-xs-3
+            li.col-xs-6
                 a(href='#') Profile
-            li.col-xs-1
-                a(href='#')
-                    i.fa.fa-blind.fa-lg
-            li.col-xs-1
-                a(href='#')
-                    i.fa.fa-glass.fa-lg
-            li.col-xs-1
-                a(href='#')
-                    i.fa.fa-gavel.fa-lg
+//            li.col-xs-1
+//                a(href='#')
+//                    i.fa.fa-blind.fa-lg
+//            li.col-xs-1
+//                a(href='#')
+//                    i.fa.fa-glass.fa-lg
+//            li.col-xs-1
+//                a(href='#')
+//                    i.fa.fa-gavel.fa-lg
