--- a/frontend/components/menu/menuStyles.css
+++ b/frontend/components/menu/menuStyles.css
@@ -1,6 +1,10 @@
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css");
 .side-menu-wrapper {
   padding-top: 2%;
+  position: fixed;
+  left: 0;
+  top: 70px;
+  z-index: 10;
 }
 .side-menu-wrapper .fa {
   position: relative;
