#61: add new for drafts

--- a/frontend/components/drafts/drafts.template.pug
+++ b/frontend/components/drafts/drafts.template.pug
@@ -1,29 +1,29 @@
 .drafts-container  
-    span.col-xs-1.col-xs-offset-10.fa.fa-close.button.exit-draft
+    span.col-xs-1.col-xs-offset-10.fa.fa-close.button.exit-draft(ng-link='["MainPage"]')
     .drafts-items
         h1 Drafts
         hr.drafts-line.hr-style
         .draft
             .draft-title
                 h2  Draft Title
-                i.fa.fa-folder-open-o.fa-2x
-                i.fa.fa-pencil.fa-2x.iconRight
+                i.fa.fa-folder-open-o.fa-2x.draft-folder(ng-link='["File"]')
+                i.fa.fa-pencil.fa-2x.iconRight(ng-link='["EditMessage"]')
             .draft-body
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum efficitur quam, nec tristique urna. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque lobortis sem sed metus suscipit, ut euismod massa scelerisque. Fusce interdum pharetra nulla
         hr.hr-style
         .draft
             .draft-title
                 h2  Draft Title2
-                i.fa.fa-folder-open-o.fa-2x
-                i.fa.fa-pencil.fa-2x.iconRight
+                i.fa.fa-folder-open-o.fa-2x.draft-folder(ng-link='["File"]')
+                i.fa.fa-pencil.fa-2x.iconRight(ng-link='["EditMessage"]')
             .draft-body
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum efficitur quam, nec tristique urna. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque lobortis sem sed metus suscipit, ut euismod massa scelerisque. Fusce interdum pharetra nulla
         hr.hr-style
         .draft
             .draft-title
                 h2  Draft Title3
-                i.fa.fa-folder-open-o.fa-2x
-                i.fa.fa-pencil.fa-2x.iconRight
+                i.fa.fa-folder-open-o.fa-2x.draft-folder(ng-link='["File"]')
+                i.fa.fa-pencil.fa-2x.iconRight(ng-link='["EditMessage"]')
             .draft-body
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum efficitur quam, nec tristique urna. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque lobortis sem sed metus suscipit, ut euismod massa scelerisque. Fusce interdum pharetra nulla
         hr.hr-style
