--- a/frontend/components/drafts/draftsStyle.styl
+++ b/frontend/components/drafts/draftsStyle.styl
@@ -14,6 +14,9 @@
         font-family: 'Montserrat';
 	    font-size: 30px;
     }
+    .draft-folder{
+        margin-left: 10px;
+    }
 
     .drafts-items{
         overflow: hidden;
