--- a/frontend/components/files/files.pug
+++ b/frontend/components/files/files.pug
@@ -1,7 +1,7 @@
 section.files-wrapper
   header
     h2 Files
-    button.fa.fa-close(ng-link='["MsgBoard"]')
+    button.fa.fa-close
       //img(ng-link='["MsgBoard"]', align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
   hr
   section.content
