--- a/frontend/components/editMessage/editMessage.pug
+++ b/frontend/components/editMessage/editMessage.pug
@@ -1,7 +1,7 @@
 section.post-message-wrapper
   header
     h2 Edit message
-    button.fa.fa-close(ng-link='["MsgBoard"]')
+    button.fa.fa-close
       //img(ng-link='["MsgBoard"]', align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
   hr
   section.input-block
